WordFeatureTreatment/trainLog/SyntaxError_3.txt
  File "a.py", line 7
    vectorizer = TfidfVectorizer()
             ^
SyntaxError: invalid syntax
